tdf#117063 Modify tree list double click behavior in the navigator

Change-Id: I369a7a2075aabd3574bdda39dac74e2b132f6923